--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -31,6 +31,11 @@ font & reset css
 reset
 --------------------------------------------- 
 */
+
+body {
+  background-color: black;
+}
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
 pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
 s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
@@ -947,7 +952,7 @@ Featured Style
 }
 
 .featured .accordion-button:not(.collapsed) {
-  color: #f35525;
+  color: red;
   background-color: #fafafa;
   outline: none;
 }
@@ -1086,14 +1091,13 @@ Fun Facts Style
 .fun-facts .counter h2 {
   margin-right: 25px;
   font-size: 40px;
-  color: #f35525;
 }
 
 .fun-facts .counter:after {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: #f35525;
+  background-color: red;
   border-radius: 50%;
   content: '';
   right: -25px;
