--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -150,13 +150,19 @@ body {
   line-height: 56px;
 }
 
+.section-heading p {
+  margin-top: 20px;
+  font-size: 20px;
+  color: white;
+}
+
 .section-heading h2 em {
   font-style: normal;
   color: #0071f8;
 }
 
 .section-heading h6 {
-  color: #ee626b;
+  color: #ff0011;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
@@ -421,6 +427,10 @@ Header Style
   color: #1e1e1e;
   font-weight: 700;
   letter-spacing: 2px;
+}
+
+.header-area .main-nav .logo img {
+  width: 130px;
 }
 
 .background-header .main-nav .logo h1 {
@@ -912,7 +922,7 @@ Featured Style
   width: 110px;
   height: 110px;
   line-height: 110px;
-  background-color: #f35525;
+  background-color: rgb(255, 255, 255);
   border-radius: 50%;
   text-align: center;
   position: absolute;
@@ -1133,7 +1143,7 @@ Best Deal Style
 }
 
 .best-deal .tabs-content .nav-tabs .nav-link.active {
-  background-color: #f35525 !important;
+  background-color: #ff0000 !important;
   color: #fff;
 }
 
